PrevotyLexer.cpp
/* Generated by re2c 0.16 on Tue Aug 22 01:33:22 2017 */
#line 1 "PrevotyLexer.re"
#include "PrevotyLexer.h"
#include "syntax_exception.h"

int PrevotyLexer::Tokenize(const char * YYCURSOR, int len , lexeme_t* lexeme)
{

 	if (lexeme->current >= (YYCURSOR + len)) {
        return 0;
    }
    lexeme->start = lexeme->current;

    const char * YYMARKER;
	#define YYCURSOR lexeme->current

	
#line 19 "<stdout>"
{
	YYCTYPE yych;
	if ((YYLIMIT - YYCURSOR) < 4) YYFILL(4);
	yych = *YYCURSOR;
	switch (yych) {
	case 0x00:	goto yy2;
	case '\t':
	case '\v':
	case '\f':
	case ' ':	goto yy6;
	case '"':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy8;
	case '(':	goto yy11;
	case ')':	goto yy13;
	case '*':	goto yy15;
	case '+':	goto yy17;
	case '-':	goto yy19;
	case '/':	goto yy21;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy23;
	case '<':	goto yy26;
	case '=':	goto yy28;
	case '>':	goto yy30;
	case 'l':	goto yy32;
	default:	goto yy4;
	}
yy2:
	++YYCURSOR;
#line 18 "PrevotyLexer.re"
	{ return 0; }
#line 108 "<stdout>"
yy4:
	++YYCURSOR;
#line 43 "PrevotyLexer.re"
	{
									std::string str(--lexeme->current,0,1);
									throw syntax_exception("Syntax Error - Unexpected "+ str +"\n");
								}
#line 116 "<stdout>"
yy6:
	++YYCURSOR;
#line 41 "PrevotyLexer.re"
	{ return -1; }
#line 121 "<stdout>"
yy8:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
yy9:
	switch (yych) {
	case '"':
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy8;
	default:	goto yy10;
	}
yy10:
#line 23 "PrevotyLexer.re"
	{ return STRING; }
#line 196 "<stdout>"
yy11:
	++YYCURSOR;
#line 33 "PrevotyLexer.re"
	{ return LPAREN; }
#line 201 "<stdout>"
yy13:
	++YYCURSOR;
#line 34 "PrevotyLexer.re"
	{ return RPAREN; }
#line 206 "<stdout>"
yy15:
	++YYCURSOR;
#line 29 "PrevotyLexer.re"
	{ return MUL; }
#line 211 "<stdout>"
yy17:
	++YYCURSOR;
#line 26 "PrevotyLexer.re"
	{ return PLUS; }
#line 216 "<stdout>"
yy19:
	++YYCURSOR;
	switch ((yych = *YYCURSOR)) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy23;
	default:	goto yy20;
	}
yy20:
#line 27 "PrevotyLexer.re"
	{ return MINUS; }
#line 235 "<stdout>"
yy21:
	++YYCURSOR;
#line 28 "PrevotyLexer.re"
	{ return DIV; }
#line 240 "<stdout>"
yy23:
	YYMARKER = ++YYCURSOR;
	if ((YYLIMIT - YYCURSOR) < 2) YYFILL(2);
	yych = *YYCURSOR;
	switch (yych) {
	case '.':	goto yy33;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy23;
	default:	goto yy25;
	}
yy25:
#line 21 "PrevotyLexer.re"
	{ return NUMBER; }
#line 262 "<stdout>"
yy26:
	++YYCURSOR;
#line 31 "PrevotyLexer.re"
	{ return LST; }
#line 267 "<stdout>"
yy28:
	++YYCURSOR;
#line 25 "PrevotyLexer.re"
	{ return EQUAL; }
#line 272 "<stdout>"
yy30:
	++YYCURSOR;
#line 30 "PrevotyLexer.re"
	{ return GRT; }
#line 277 "<stdout>"
yy32:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'e':	goto yy35;
	default:	goto yy9;
	}
yy33:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy36;
	default:	goto yy34;
	}
yy34:
	YYCURSOR = YYMARKER;
	goto yy25;
yy35:
	yych = *++YYCURSOR;
	switch (yych) {
	case 't':	goto yy38;
	default:	goto yy9;
	}
yy36:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy36;
	default:	goto yy25;
	}
yy38:
	++YYCURSOR;
	switch ((yych = *YYCURSOR)) {
	case '"':
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy8;
	default:	goto yy39;
	}
yy39:
#line 22 "PrevotyLexer.re"
	{ return LET; }
#line 396 "<stdout>"
}
#line 48 "PrevotyLexer.re"


}